root min height and flex is removed for overlapping issue

--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@ body {
 
 .svg-background {
   height: 100vh;
-  background-image: url("/public/authBg.svg");
+  background-image: url("/authBg.svg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
